# autokeras

./: .env  generator.py  pyproject.toml  requirements.txt  test.py
autokeras/: solver.py
image_classifier/: oracle.json
image_classifier/trial_0c2e78da8149ce8da589d135ab47ae21/: trial.json
