[tool.poetry]
name = "autokeras"
version = "0.1.0"
description = ""
authors = ["Xiaozhe Yao <xiaozhe.yaoi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
autokeras = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
